--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -58,32 +58,56 @@ parts box
       padding: 5px;">
  <form >
 <select id="webtronics_part" size="10">
-	<option value="./symbols/npn.svg"  >npn bjt</option>
-	<option value="./symbols/pnp.svg" >pnp bjt</option>
-	<option  value="./symbols/njfet.svg" >njfet </option>
-	<option  value="./symbols/pjfet.svg" >pjfet</option>
+
 	<option  value="./symbols/capacitor.svg" >capacitor</option>
+	<option  value="./symbols/polar-cap.svg" >polar cap</option>
+	<option  value="./symbols/varicap.svg" >vari cap</option>
 	<option  value="./symbols/resistor.svg" >resistor</option>
+	<option  value="./symbols/vresistor.svg" >variable resistor</option>
+	<option  value="./symbols/vari-resistor.svg" >potentiometer</option>
+
 	<option  value="./symbols/coil.svg" >inductor</option>
+	<option  value="./symbols/transformer.svg" >transformer</option>
 	<option  value="./symbols/battery.svg" >battery</option>
 	<option  value="./symbols/gnd.svg" >ground</option>
 	<option  value="./symbols/positive.svg" >positive</option>
 	<option  value="./symbols/diode.svg" >diode</option>
+	<option  value="./symbols/led.svg" >led</option>
+	<option  value="./symbols/zener.svg" >zener diode</option>
+	<option  value="./symbols/scr.svg" >scr</option>
+	<option  value="./symbols/triac.svg" >triac</option>
+	<option  value="./symbols/trigger.svg" >trigger diode</option>
+
+	<option value="./symbols/npn.svg"  >npn bjt</option>
+	<option value="./symbols/pnp.svg" >pnp bjt</option>
+	<option  value="./symbols/njfet.svg" >njfet </option>
+	<option  value="./symbols/pjfet.svg" >pjfet</option>
+	<option  value="./symbols/nmosfet.svg" >nmosfet</option>
+	<option  value="./symbols/pmosfet.svg" >pmosfet</option>
 	<option  value="./symbols/nopb.svg" >nopb</option>
-	<option  value="./symbols/transformer.svg" >transformer</option>
-	<option  value="./symbols/vresistor.svg" >variable resistor</option>
 	<option  value="./symbols/tapcoil.svg" >tapped inductor</option>
 	<option  value="./symbols/phototrans.svg" >phototransistor</option>
 	<option  value="./symbols/photodiode.svg" >photodiode</option>
 	<option  value="./symbols/photo-res.svg" >photo resistor</option>
-	<option  value="./symbols/zener.svg" >zener diode</option>
 	<option  value="./symbols/crystal.svg" >crystal</option>
-	<option  value="./symbols/led.svg" >led</option>
 	<option  value="./symbols/spst-switch.svg" >spst switch</option>
 	<option  value="./symbols/op-amp.svg" >op-amp</option>
-	<option  value="./symbols/scr.svg" >scr</option>
 	<option  value="./symbols/spst-relay.svg" >spst-relay</option>
 	<option  value="./symbols/speaker.svg" >speaker</option>
+
+
+	<option  value="./symbols/3_pins.svg" >3 pins</option>
+	<option  value="./symbols/4_pins.svg" >4 pins</option>
+	<option  value="./symbols/5_pins.svg" >5 pins</option>
+
+
+	<option  value="./symbols/INVERTER.svg" >NOT</option>
+	<option  value="./symbols/AND.svg" >AND</option>
+	<option  value="./symbols/NAND.svg" >NAND</option>
+	<option  value="./symbols/OR.svg" >OR</option>
+	<option  value="./symbols/NOR.svg" >NOR</option>
+	<option  value="./symbols/XOR.svg" >XOR</option>
+	<option  value="./symbols/XNOR.svg" >XNOR</option>
 
 </select>
 </form>
@@ -126,7 +150,7 @@ style="display:none;
       padding: 5px;">
   <div id="webtronics_chip_display"  style="width:300px; height:300px; border:1px solid black; background-color:#ffffff;" >
   </div>
-	<form  >
+	<form>
 <br>
 	<select id="webtronics_vert_pins">
 		<option value=1>1</option>
