--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -23,10 +23,10 @@ toolbar
 	<img id="webtronics_file_open" title="open file" src="./buttons/open.png" />
 	<img id='webtronics_chips_open' title="make chips" src="./buttons/icbut.png" />
 	<img id="webtronics_parts_open" title="get parts" src="./buttons/disc.png"/>
-	<img id="webtronics_zoom"  title="zoom image"  src="./buttons/zoom.png"/>
+	<img id="webtronics_zoom"  title="click this to zoom out, select area to zoom in"  src="./buttons/zoom.png"/>
 	<img id="webtronics_select" title="Select shapes" src="./buttons/select.png" />
-	<img id="webtronics_rotate" title ="rotate parts" src="./buttons/rotate.png" />
-	<img id="webtronics_wire" title="Draw wires"  src="./buttons/wire.png" />
+	<img id="webtronics_rotate" title ="select 1 part and click to rotate part" src="./buttons/rotate.png" />
+	<img id="webtronics_wire" title="left click to start wire, right click to end wire"  src="./buttons/wire.png" />
 	<img id="webtronics_text" title="add text"  src="./buttons/text.png" />
 	<img  id="webtronics_delete" title="Delete selected shape" src="./buttons/delete.png" />
 	<img  id="webtronics_save" title="Save the file" src="./buttons/save.png" />
