added new file button to clear screen

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -16,7 +16,8 @@
 toolbar
 -->
 <div  id="webtronics_toolbar" >
-	<img id="webtronics_file_open" title="open file" src="./buttons/open.png" />
+	<img id="webtronics_file_open" title="import file" src="./buttons/open.png" />
+	<img id="webtronics_new" title ="clear the drawing area" src="./buttons/new.png" />
 	<img id='webtronics_chips_open' title="make chips" src="./buttons/icbut.png" />
 	<img id="webtronics_parts_open" title="get parts" src="./buttons/disc.png"/>
 	<img id="webtronics_zoom"  title="click this to zoom out, select area to zoom in"  src="./buttons/zoom.png"/>
