changed wire routing to one button

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -26,10 +26,12 @@ toolbar
 	<img id="webtronics_zoom"  title="click this to zoom out, select area to zoom in"  src="./buttons/zoom.png"/>
 	<img id="webtronics_select" title="Select shapes" src="./buttons/select.png" />
 	<!--img id="webtronics_rotate" title ="select 1 part and click to rotate part" src="./buttons/rotate.png" /-->
-	<img id="webtronics_wire" title="left click to start wire, right click to end wire"  src="./buttons/wire.png" />
+	<img id="webtronics_wire" title="click to start wire"  src="./buttons/wire.png" />
 	<img id="webtronics_text" title="add text"  src="./buttons/text.png" />
 	<img  id="webtronics_delete" title="Delete selected shape" src="./buttons/delete.png" />
 	<img  id="webtronics_save" title="Save the file" src="./buttons/save.png" />
+	<!--<img  id="webtronics_netlist" title="Create a netlist" src="./buttons/net.png" />-->
+
 	<form id="webtronics_settings">
 		<input type="checkbox" id="webtronics_connections" /> show connections 
 		<input type="checkbox" id="webtronics_invert" />Invert colors
@@ -110,7 +112,7 @@ parts box
 
 </select>
 </form>
-<embed   id="webtronics_part_display" src="./symbols/gnd.svg" width="60" height="60" />	
+<embed   id="webtronics_part_display" width="70" height="70" />	
 <br>
 <img  id="webtronics_part_ok" src="./buttons/ok.png" />
 <img  id="webtronics_part_cancel" src="./buttons/cancel.png" />
