--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -34,7 +34,7 @@ toolbar
 
 	<form id="webtronics_settings">
 		<input type="checkbox" id="webtronics_connections" /> show connections 
-		<input type="checkbox" id="webtronics_invert" />Invert colors
+		<!--<input type="checkbox" id="webtronics_invert" />Invert colors-->
 	</form>
 </div>
 <!--
