--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -69,6 +69,7 @@ parts box
 	<option  value="./symbols/coil.svg" >inductor</option>
 	<option  value="./symbols/transformer.svg" >transformer</option>
 	<option  value="./symbols/battery.svg" >battery</option>
+	<option  value="./symbols/ac.svg" >ac-source</option>
 	<option  value="./symbols/gnd.svg" >ground</option>
 	<option  value="./symbols/positive.svg" >positive</option>
 	<option  value="./symbols/diode.svg" >diode</option>
