--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -113,7 +113,7 @@ parts box
 
 </select>
 </form>
-<embed   id="webtronics_part_display" width="70" height="70" />	
+<embed   src="./symbols/capacitor.svg" id="webtronics_part_display" type="image/svg+xml" width="70" height="70" />	
 <br>
 <img  id="webtronics_part_ok" src="./buttons/ok.png" />
 <img  id="webtronics_part_cancel" src="./buttons/cancel.png" />
