--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -55,7 +55,12 @@ parts box
 -->
 
 <div id="webtronics_parts_box">
- <form >
+
+<img  id="webtronics_part_ok" src="./buttons/ok.png" />
+<img  id="webtronics_part_cancel" src="./buttons/cancel.png" />
+
+<form >
+
 <select id="webtronics_part" size="10">
 
 	<option  value="./symbols/capacitor.svg" >capacitor</option>
@@ -113,11 +118,9 @@ parts box
 
 </select>
 </form>
-<embed   src="./symbols/capacitor.svg" id="webtronics_part_display" type="image/svg+xml" width="70" height="70" />	
 <br>
-<img  id="webtronics_part_ok" src="./buttons/ok.png" />
-<img  id="webtronics_part_cancel" src="./buttons/cancel.png" />
-</div>
+<embed   src="./symbols/capacitor.svg" id="webtronics_part_display" type="image/svg+xml" width="70" height="70" />	
+<br></div>
 <!--
 open files
 -->
