added mediawiki plugin and graph

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="schematic.css" type="text/css" />
+<script type="text/javascript" >var graphPath = 'graph.jpg'</script>
 <script type="text/javascript" src="./script/prototype.js"></script>
 <script type="text/javascript" src="./script/schematic.js"></script>
 <script type="text/javascript" src="./script/primatives.js"></script>
@@ -33,7 +34,8 @@ toolbar
 	<!--<img  id="webtronics_netlist" title="Create a netlist" src="./buttons/net.png" />-->
 
 	<form id="webtronics_settings">
-		<input type="checkbox" id="webtronics_connections" /> show connections 
+		<input type="checkbox" id="webtronics_connections" > show connections </input>
+		<input type="checkbox" id="webtronics_graph" > show graph </input>
 		<!--<input type="checkbox" id="webtronics_invert" />Invert colors-->
 	</form>
 </div>
