--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -34,8 +34,8 @@ toolbar
 	<!--<img  id="webtronics_netlist" title="Create a netlist" src="./buttons/net.png" />-->
 
 	<form id="webtronics_settings">
-		<input type="checkbox" id="webtronics_connections" > show connections </input>
-		<input type="checkbox" id="webtronics_graph" > show graph </input>
+		<input type="checkbox" id="webtronics_connections" > show connections 
+		<input type="checkbox" id="webtronics_graph" > show graph 
 		<!--<input type="checkbox" id="webtronics_invert" />Invert colors-->
 	</form>
 </div>
