changed wire routing

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -33,11 +33,11 @@ toolbar
 	<img  id="webtronics_save" title="Save the file" src="./buttons/save.png" />
 	<!--<img  id="webtronics_netlist" title="Create a netlist" src="./buttons/net.png" />-->
 
-	<form id="webtronics_settings">
+	<!--form id="webtronics_settings"-->
 		<input type="checkbox" id="webtronics_connections" > show connections 
 		<input type="checkbox" id="webtronics_graph" > show graph 
 		<!--<input type="checkbox" id="webtronics_invert" />Invert colors-->
-	</form>
+	<!--/form-->
 </div>
 <!--
 display area
