improved file dialog

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -126,11 +126,11 @@ parts box
 <!--
 open files
 -->
-<div id="webtronics_open_file" >
+<div id="webtronics_open_file" title="import file" >
 
 <form>
 <input type="file" id="webtronics_open_file_selector" />
-<img  id="webtronics_open_file_cancel" src="./buttons/cancel.png" />
+<!--img  id="webtronics_open_file_cancel" src="./buttons/cancel.png" /-->
  </form>
 
 </div>
