improved file dialog

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -70,8 +70,8 @@ parts box
 	<option  value="./symbols/varicap.svg" >vari cap</option>
 	<option  value="./symbols/resistor.svg" >resistor</option>
 
-	<option  value="./symbols/vresistor.svg" >variable resistor</option>
-	<option  value="./symbols/vari-resistor.svg" >potentiometer</option>
+	<option  value="./symbols/vresistor.svg" >potentiometer</option>
+	<option  value="./symbols/vari-resistor.svg" >variable resistor</option>
 
 	<option  value="./symbols/coil.svg" >inductor</option>
 	<option  value="./symbols/transformer.svg" >transformer</option>
