improved import of files

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -77,7 +77,7 @@ parts box
 	<option  value="./symbols/polar-cap.svg" >polar cap</option>
 	<option  value="./symbols/varicap.svg" >vari cap</option>
 	<option  value="./symbols/resistor.svg" >resistor</option>
-	<option  value="./symbols/testresistor.svg" >testresistor</option>
+	<!--option  value="./symbols/testresistor.svg" >testresistor</option-->
 
 	<option  value="./symbols/vresistor.svg" >potentiometer</option>
 	<option  value="./symbols/vari-resistor.svg" >variable resistor</option>
