doubled chip size

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="./script/connections.js"></script>
 <script type="text/javascript" src="./script/chipmaker.js"></script>
 <script type="text/javascript" src="./script/gui.js"></script>
+<script type="text/javascript" src="./script/proto.menu.js"></script>
 
 </head>
 
@@ -51,7 +52,7 @@ toolbar
 display area
 -->
 
-  <div id="webtronics_diagram_area" >
+  <div id="webtronics_diagram_area" class='drawing' >
   </div>
 
 <!--
@@ -280,11 +281,11 @@ add code text
  -->
 
 <div id="webtronics_open_text" >
-
 <textarea cols="50" rows="4" id="webtronics_svg_code"></textarea>
 <img  id="webtronics_open_text_ok" src="./buttons/ok.png" /> 
 <img  id="webtronics_open_text_cancel" src="./buttons/cancel.png" />
 </div>
+
 </div>
 </body>
 </html>
