--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="schematic.css" type="text/css" />
-<script type="text/javascript" >var graphPath = 'graph.jpg'</script>
+<!--script type="text/javascript" >var graphPath = 'graph.jpg'</script-->
 <script type="text/javascript" src="./script/prototype.js"></script>
 <script type="text/javascript" src="./script/schematic.js"></script>
 <script type="text/javascript" src="./script/primatives.js"></script>
@@ -22,24 +22,23 @@ toolbar
 -->
 <div  id="webtronics_toolbar" >
 	<div id="webtronics_buttons">
-		<img id="webtronics_file_open" title="import file" src="./buttons/open.png" />
-		<img id="webtronics_new" title ="clear the drawing area" src="./buttons/new.png" />
-		<img id='webtronics_chips_open' title="make chips" src="./buttons/icbut.png" />
-		<img id="webtronics_parts_open" title="get parts" src="./buttons/disc.png"/>
-		<img id="webtronics_zoom"  title="click this to zoom out, select area to zoom in"  src="./buttons/zoom.png"/>
-		<img id="webtronics_select" title="Select shapes" src="./buttons/select.png" />
-		<!--img id="webtronics_rotate" title ="select 1 part and click to rotate part" src="./buttons/rotate.png" /-->
-		<img id="webtronics_wire" title="click to start wire"  src="./buttons/wire.png" />
-		<img id="webtronics_text" title="add text"  src="./buttons/text.png" />
-		<img  id="webtronics_delete" title="Delete selected shape" src="./buttons/delete.png" />
-		<img  id="webtronics_save" title="Save the file" src="./buttons/save.png" />
+		<img id="webtronics_file_open" class="normal_button" title="import file" src="./buttons/open.png" />
+		<img id="webtronics_new" class="normal_button" title ="clear the drawing area" src="./buttons/new.png" />
+		<img id='webtronics_chips_open' class="normal_button" title="make chips" src="./buttons/icbut.png" />
+		<img id="webtronics_parts_open" class="normal_button" title="get parts" src="./buttons/disc.png"/>
+		<!--img id="webtronics_zoom"  title="click this to zoom out, select area to zoom in"  src="./buttons/zoom.png"/-->
+		<img id="webtronics_select" class="normal_button" title="Select shapes" src="./buttons/select.png" />
+		<img id="webtronics_wire" class="normal_button" title="click to start wire"  src="./buttons/wire.png" />
+		<img id="webtronics_text" class="normal_button" title="add text"  src="./buttons/text.png" />
+		<img  id="webtronics_delete" class="normal_button" title="Delete selected shape" src="./buttons/delete.png" />
+		<img  id="webtronics_save" class="normal_button" title="Save the file" src="./buttons/save.png" />
 	</div>
 	<!--<img  id="webtronics_netlist" title="Create a netlist" src="./buttons/net.png" />-->
 	<div id="webtronics_settings"> 	
 		<form> 
-			<input type="checkbox" id="webtronics_connections" > show connections 
-			<input type="checkbox" id="webtronics_graph" > show graph 
-			<!--<input type="checkbox" id="webtronics_invert" />Invert colors-->
+			<input type="checkbox" id="webtronics_connections" >connections 
+			<input type="checkbox" id="webtronics_graph" >graph 
+			<input type="checkbox" id="webtronics_invert">Invert
 		</form>
 	</div>
 	<div id="webtronics_value_box" ><input id="webtronics_value" />value/part#</div>
@@ -52,8 +51,9 @@ toolbar
 display area
 -->
 
-  <div id="webtronics_diagram_area" class='drawing' >
-  </div>
+<div id="webtronics_diagram_area" class='drawing' >
+
+</div>
 
 <!--
 status bar
@@ -79,10 +79,8 @@ parts box
 	<option  value="./symbols/varicap.svg" >vari cap</option>
 	<option  value="./symbols/resistor.svg" >resistor</option>
 	<!--option  value="./symbols/testresistor.svg" >testresistor</option-->
-
 	<option  value="./symbols/vresistor.svg" >potentiometer</option>
 	<option  value="./symbols/vari-resistor.svg" >variable resistor</option>
-
 	<option  value="./symbols/coil.svg" >inductor</option>
 	<option  value="./symbols/transformer.svg" >transformer</option>
 	<option  value="./symbols/battery.svg" >battery</option>
@@ -95,7 +93,6 @@ parts box
 	<option  value="./symbols/scr.svg" >scr</option>
 	<option  value="./symbols/triac.svg" >triac</option>
 	<option  value="./symbols/trigger.svg" >trigger diode</option>
-
 	<option value="./symbols/npn.svg"  >npn bjt</option>
 	<option value="./symbols/pnp.svg" >pnp bjt</option>
 	<option  value="./symbols/njfet.svg" >njfet </option>
@@ -113,13 +110,9 @@ parts box
 	<option  value="./symbols/op-amp.svg" >op-amp</option>
 	<option  value="./symbols/spst-relay.svg" >spst-relay</option>
 	<option  value="./symbols/speaker.svg" >speaker</option>
-
-
 	<option  value="./symbols/3_pins.svg" >3 pins</option>
 	<option  value="./symbols/4_pins.svg" >4 pins</option>
 	<option  value="./symbols/5_pins.svg" >5 pins</option>
-
-
 	<option  value="./symbols/INVERTER.svg" >NOT</option>
 	<option  value="./symbols/AND.svg" >AND</option>
 	<option  value="./symbols/NAND.svg" >NAND</option>
