--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="schematic.css" type="text/css" />
-<!--script type="text/javascript" >var graphPath = 'graph.jpg'</script-->
+<script type="text/javascript" >var webtronicsPath = './'</script>
 <script type="text/javascript" src="./script/prototype.js"></script>
 <script type="text/javascript" src="./script/schematic.js"></script>
 <script type="text/javascript" src="./script/primatives.js"></script>
@@ -26,14 +26,13 @@ toolbar
 		<img id="webtronics_new" class="normal_button" title ="clear the drawing area" src="./buttons/new.png" />
 		<img id='webtronics_chips_open' class="normal_button" title="make chips" src="./buttons/icbut.png" />
 		<img id="webtronics_parts_open" class="normal_button" title="get parts" src="./buttons/disc.png"/>
-		<!--img id="webtronics_zoom"  title="click this to zoom out, select area to zoom in"  src="./buttons/zoom.png"/-->
 		<img id="webtronics_select" class="normal_button" title="Select shapes" src="./buttons/select.png" />
 		<img id="webtronics_wire" class="normal_button" title="click to start wire"  src="./buttons/wire.png" />
 		<img id="webtronics_text" class="normal_button" title="add text"  src="./buttons/text.png" />
 		<img  id="webtronics_delete" class="normal_button" title="Delete selected shape" src="./buttons/delete.png" />
 		<img  id="webtronics_save" class="normal_button" title="Save the file" src="./buttons/save.png" />
+		<img  id="webtronics_netlist" class="normal_button" title="view the netlist" src="./buttons/netlist.png" />
 	</div>
-	<!--<img  id="webtronics_netlist" title="Create a netlist" src="./buttons/net.png" />-->
 	<div id="webtronics_settings"> 	
 		<form> 
 			<input type="checkbox" id="webtronics_connections" >connections 
@@ -41,7 +40,7 @@ toolbar
 			<input type="checkbox" id="webtronics_invert">Invert
 		</form>
 	</div>
-	<div id="webtronics_value_box" ><input id="webtronics_value" />value/part#</div>
+	<!--div id="webtronics_value_box" ><input id="webtronics_value" />value/part#</div-->
 
 </div>
 
@@ -51,7 +50,7 @@ toolbar
 display area
 -->
 
-<div id="webtronics_diagram_area" class='drawing' >
+<div id="webtronics_diagram_area">
 
 </div>
 
@@ -270,6 +269,17 @@ add text
 </form>
 </div>
 <!--
+properties form
+-->
+<div id= webtronics_properties_form>
+<form>
+<input id="webtronics_partvalue" />value<br>
+<!--input id="webtronics_partmodel" />model#-->
+<img  id="webtronics_properties_ok" src="./buttons/ok.png" /> 
+</form>
+</div>
+
+<!--
 add code text
  -->
 
@@ -278,6 +288,7 @@ add code text
 <img  id="webtronics_open_text_ok" src="./buttons/ok.png" /> 
 <img  id="webtronics_open_text_cancel" src="./buttons/cancel.png" />
 </div>
+
 
 </div>
 </body>
