--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -17,24 +17,45 @@ toolbar
 -->
 	<div id="webtronics_toolbar">
 		<div id="webtronics_buttons">
-			<img id="webtronics_file_open" class="normal_button" title="import file" src="./buttons/open.png">
-			<img id="webtronics_new" class="normal_button" title="clear the drawing area" src="./buttons/new.png">
-			<img id="webtronics_chips_open" class="normal_button" title="make chips" src="./buttons/icbut.png">
-			<img id="webtronics_select" class="normal_button" title="Select shapes" src="./buttons/select.png">
-			<img id="webtronics_wire" class="normal_button" title="click to start wire" src="./buttons/wire.png">
-			<img id="webtronics_text" class="normal_button" title="add text" src="./buttons/text.png">
-			<img id="webtronics_delete" class="normal_button" title="Delete selected shape" src="./buttons/delete.png">
-			<img id="webtronics_undo" class="normal_button" title="undo last action" src="./buttons/undo.png">
-			<img id="webtronics_redo" class="normal_button" title="redo last action" src="./buttons/redo.png">
-			<img id="webtronics_save" class="normal_button" title="Save the file" src="./buttons/save.png">
-			<img id="webtronics_netlist" class="normal_button" title="view the netlist" src="./buttons/netlist.png">
+			<fieldset >
+				<legend>File</legend>
+				<img id="webtronics_file_open" class="normal_button" title="import file" src="./buttons/open.png">
+				<img id="webtronics_new" class="normal_button" title="clear the drawing area" src="./buttons/new.png">
+				<img id="webtronics_save" class="normal_button" title="Save the file" src="./buttons/save.png">
+			</fieldset>
+			<fieldset>	
+				<legend>Circuit</legend>
+				<img id="webtronics_netlist" class="normal_button" title="view the netlist" src="./buttons/netlist.png">
+				<img id="webtronics_chips_open" class="normal_button" title="make chips" src="./buttons/icbut.png">
+				<img id="webtronics_delete" class="normal_button" title="Delete selected shape" src="./buttons/delete.png">
+			</fieldset>
+			<fieldset>
+				<legend>Mode</legend>				
+				<img id="webtronics_select" class="normal_button" title="Select shapes" src="./buttons/select.png">
+				<img id="webtronics_wire" class="normal_button" title="click to start wire" src="./buttons/wire.png">
+				<img id="webtronics_text" class="normal_button" title="add text" src="./buttons/text.png">
+			</fieldset>
+			<fieldset>
+				<legend>History</legend>			
+				<img id="webtronics_undo" class="normal_button" title="undo last action" src="./buttons/undo.png">
+				<img id="webtronics_redo" class="normal_button" title="redo last action" src="./buttons/redo.png">
+			</fieldset>
 		</div>
 		<div id="webtronics_settings"> 	
-			<form> 
-				connections<input id="webtronics_connections" type="checkbox"><br> 
-				graph<input id="webtronics_graph" type="checkbox"> 
-				<!--input type="checkbox" id="webtronics_invert">Invert-->
-			</form>
+			<fieldset>
+				<legend>Settings</legend>			
+				<form> 
+					<table  border="0" cellpadding="0" cellspacing="0">				
+					<tr>
+						<td><input id="webtronics_connections" type="checkbox"></td><td> connections</td>
+						<td><input id="webtronics_graph" type="checkbox"></td><td>graph</td>           
+					</tr>
+					<tr>
+						<td><input type="checkbox" id="webtronics_invert"></td><td>invert</td>
+					</tr>
+					</table>         
+				</form>
+			</fieldset>
 		</div>
 
 	</div>
