added security lists

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -132,6 +132,7 @@ toolbar
 			<div><p>resistors</p>
 				<div>
 					<p>photo-resistor</p>
+					<p>testresistor</p>
 					<p>resistor</p>
 					<p>potentiometer</p>
 					<p>vari-resistor</p>
