--- a/webtronics/canvas/canvas.html
+++ b/webtronics/canvas/canvas.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="../style/canvas.css" type="text/css">
 <script type="text/javascript" src="../script/prototype.js"></script>
+<script type="text/javascript" src="../script/utils.js"></script>
 <script type="text/javascript" src="../script/schematic.js"></script>
 <script type="text/javascript" src="../script/primatives.js"></script>
 <script type="text/javascript" src="../script/connections.js"></script>
