attempted ie9 save svg fix

--- a/webtronics/canvas/canvas.html
+++ b/webtronics/canvas/canvas.html
@@ -1,5 +1,5 @@
-<?xml version="1.0"?>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<!DOCTYPE html>
+<html>
 <head>
 <link rel="stylesheet" href="../style/canvas.css" type="text/css">
 <script type="text/javascript" src="../script/prototype.js"></script>
