attempted ie9 save svg fix

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -1010,7 +1010,11 @@ add code text
 <div id ="webtronics_image" class="modal">
 <img id="webtronics_image_ok" src="./buttons/ok.png"> 
 <br>
-<div id='webtronics_image_div' ><img id="webtronics_image_save" ></div>    
+<div id='webtronics_image_div' >
+<object id="webtronics_svg_save" type="image/svg+xml" >    
+    <img id="webtronics_image_save" >
+</object>
+</div>    
 </div>
 
 </div>
