attempted ie9 save svg fix

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -1011,8 +1011,8 @@ add code text
 <img id="webtronics_image_ok" src="./buttons/ok.png"> 
 <br>
 <div id='webtronics_image_div' >
-<embed src="webtronics_svg_save" type="image/svg+xml" >    
-    <img id="webtronics_image_save" >
+<embed src="webtronics_image_save" type="image/svg+xml" >    
+<p>not supported</p>
 </embed>
 </div>    
 </div>
