attempted ie9 save svg fix

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -1011,9 +1011,7 @@ add code text
 <img id="webtronics_image_ok" src="./buttons/ok.png"> 
 <br>
 <div id='webtronics_image_div' >
-<embed id="webtronics_image_save" type="image/svg+xml" >    
-<p>not supported</p>
-</embed>
+<img id="webtronics_image_save" >
 </div>    
 </div>
 
