improved spice output

--- a/webtronics/canvas/canvas.html
+++ b/webtronics/canvas/canvas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <link rel="stylesheet" href="../style/canvas.css" type="text/css">
 <script type="text/javascript" src="../script/prototype.js"></script>
 <script type="text/javascript" src="../script/utils.js"></script>
