added json object and some models

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -218,7 +218,7 @@ properties form
 <select id="webtronics_part_model">
 		<option value="none">none</option>	
 </select>Value or Model<br>
-<input id="webtronics_model_text">external model<br>
+<!--input id="webtronics_model_text">external model<br-->
 <img id="webtronics_properties_ok" src="./buttons/ok.png"> 
 <img id="webtronics_properties_cancel" src="./buttons/cancel.png">
 </form>
